@@ -15,6 +15,7 @@ EXTRA_DIST = dolfin/dolfin_ode.h \
              dolfin/MonoAdaptivity.h \
              dolfin/MultiAdaptiveFixedPointSolver.h \
              dolfin/MultiAdaptiveJacobian.h \
+	     dolfin/NewMultiAdaptiveJacobian.h \
              dolfin/MultiAdaptiveNewtonSolver.h \
              dolfin/MultiAdaptivePreconditioner.h \
              dolfin/MultiAdaptiveTimeSlab.h \
