@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2003-05-06
-// Last changed: 2005-11-01
+// Last changed: 2005-11-10
 
 #ifndef __SETTINGS_H
 #define __SETTINGS_H
@@ -40,6 +40,7 @@ namespace dolfin
       add(Parameter::BOOL, "implicit", false);
       add(Parameter::BOOL, "matrix piecewise constant", true);
       add(Parameter::BOOL, "monitor convergence", false);
+      add(Parameter::BOOL, "use new jacobian", false); // temporary for testing
 
       add(Parameter::INT, "order", 1);
       add(Parameter::INT, "number of samples", 101);
