@@ -1,3 +1,5 @@
+ - Dynamically adjust safety factor during integration
+ - Improve output Matrix::disp()
  - Check residual at end of time step, reject step if too large
  - Implement Vector::sum()
  - Implement nonlinear solver
